@@ -2,25 +2,20 @@
 Hash: SHA256
 
 AUX evemu-1.2.0-install-man.patch 1293 SHA256 9586ccac0c40f4470742da7ef84b57b69e994dcb7614b68771b845a803413b24 SHA512 3e687e5525e331584f665593ccfd364d52b237adcc26408485643e8709601425e47654d211fa1989d8e1f02ca2e8550f9069fa4e46bcad79b3ada5dd6a727f0c WHIRLPOOL e017ca1472510d07788575e30dbb98ebd891aeed0fbd585e1814d17b25f07fc389fdbb8dbb406200bbdce7c42f077db77cb06601afa3e7667c1518abe8682768
-DIST evemu-1.1.0.tar.xz 482884 SHA256 2a10065b66f85053476082f07b8af4fb96d4abe35509e1fd0e166326195fc9dd SHA512 2915ef6ee651a6fbf1c10c3a7562f748be376fd7fe13f3c3e9ef3ac959d1250c2c38c758f29361e134a97a6087cd3f1fbf307a959235f6022bab7daa65dd3c10 WHIRLPOOL 978da8be9e0a083edb07960f868cd42c89d0f1f2861698845236a267b55611435c09d6c864c361b1de404efaa06a84fe43879efc9d88ebd55aee4471650f8596
 DIST evemu-1.2.0.tar.xz 498400 SHA256 bcc2a97a8e10048ff6b9122180d27ccada63d4f8ca89e61e962201a13551f475 SHA512 41bef7b2e0f0769e4affb5633f41e5352224f5acfb5a001a27548f2236a1dc23d444bbfc3e93ea8eb518a7f4e628185eef9ca5ecefa4d87b201224bfeee28044 WHIRLPOOL 31879f637959265f7c8067c8dedd2b57fa82aeaac94af53fd42270715579163165f7a3d4fb460f2d15080c42d467c4a872c1dbc964018b684f32db49613ef97b
-DIST evemu-1.99.1.tar.xz 498716 SHA256 028854dedffc6a0cd067ed0a68c408c9dc487189fb512cdc3b0e9be2751dabe9 SHA512 afa1a25d39b4371c691c1fc2fc95ce86696d6a6542cb7a1ca98e80864c60910a33dfb52e6478a80f4effe3310ea07a93ef8b2064012965ce5bd6d59ba0ffb5ca WHIRLPOOL 8562ca4373049abd6c470394805375d4e7cc4e4d020a2013c44f396b588e5b44656da848456215423dbe1087516d41504acfba8e0ba0833e0cd125daf7a92710
 DIST evemu-2.0.0.tar.xz 508212 SHA256 2734e980c2bd7450270aec49a14e04d0042a6d39d3946c23ed99a3f86c9af061 SHA512 4853c36dda5e5e015561cffe0cbfbe8e17c10562c7842dd0d9a969cd1b26a1513be49f4310733be862c847828b6dae1cb77b0ae6c98463fcd7cf8619f6502053 WHIRLPOOL a222ebd92c146e3a787b6a51ea5edb2aa373ce2be1b2b82988786e575f744ac206febce0af5c0e2be3c2e43b1155f387e6db5f1dcde5e0aa739ca09ab0f8d111
-EBUILD evemu-1.1.0.ebuild 1146 SHA256 1fa855cf2e77ecb33960e5fdd1ab5c03793c00121a41ab355244730e2c974017 SHA512 0511812f12b617d8dee7d1ae4a7b510cebb1c9bdb829252c9aae180e7ef42e14c1b27967adfe0136563729c3c163342d19e03b80b4dd8be8abb7c7cf13e8371b WHIRLPOOL 7198fb8c6368b75142e48959ca9626adc8a031ef2480a1150c9d0222ea266e2fef8117d1be10907629ccf1fe5f34b233dd1b9220f7055304bd82769190347a49
 EBUILD evemu-1.2.0-r1.ebuild 1198 SHA256 44f9ff13ee995f5c78ed7e80e7913ed9d7183771f6973c6dfe4cf56d33ecf2cd SHA512 98b190c6672cb90861dd973586eebb7c9fd6a8590b5e190eac66ffc680db098af50bd290bf4f58668a7674e6186145b1909c956c6ffc8bad8f0f2c7ca56a675c WHIRLPOOL 34993d4cad6dc8efe7c494708f658f8f281a0443481c7c29d37e600e2558a4cd3f34390c56ef639a597b5a8b4dff71373ca63e909b2fd229434b1780c7638b4b
-EBUILD evemu-1.2.0.ebuild 1146 SHA256 a72d18e15c5fbddd2bf82f6d9896d6fd53bbe3d1bd3ebbd8ee6457805b217e68 SHA512 a75fbceda9c16e9550c6b4db85421b7113a23b56f33ca0c5a76995d88aeb3cb7fe113f11ead18e5e91979e3f38c2a605bfd2a69859f93f79f7a7403b14048dc4 WHIRLPOOL 9bb61a442c51f7501d3005b495dda754d14dd8c68e14dc2b99a5a2995e0296f48c36518b12280f59f1fbac2e75aedc525411b62c120bc22f74c16d91ac671be3
-EBUILD evemu-1.99.1.ebuild 1224 SHA256 11124605ab810052b284d09435ad0ebcfb0e4d3efaedbe15d5f82cfe5d4b8a7f SHA512 58cd56c2664f91326cb0107f443ecb6c5af812f542380d9d9964dc32890bc657b2b912cbd055503607464caaa838137bf61b3aadca6a4ddc1e749dcbf773580a WHIRLPOOL 28634d4eb1b6a8e50aef19d21e3962e99d32746240ad5c4e7469e67b84b6c821972c914e2db0e9da76cf9a013dffbf7b2cd908316e010c4bf0727d6762cd0c9d
 EBUILD evemu-2.0.0.ebuild 1223 SHA256 934a4873bccb341edde2e6190cec0865bac15d5879013774aa9064c07aab51e2 SHA512 56b7a1aa470d7fce5fed3b742cb711664d5ab2733954af1cea6a40c3e8ab6c9d77914c8a0d1b8e6c88dcb48c6c36219d3a6fa11de9b07e41037a96fa25186ca7 WHIRLPOOL 7d0f69c6928b41fbb5defec0508dc30c7f9c4222694b1f897d0bba4116ebd74de8000b5832af2c688e7166b01e9975587c8769c9e3264c8fae5c3ec49ed889ce
-MISC ChangeLog 1014 SHA256 26381a80a2b78061aca8fb61906ef01c10fdcda958be552adca59b821cb83b0a SHA512 0f9e2ff73083edba4bd7745d4038ca2594d53830938d479102190ab0d3620b87c52251739dfc3ef4c9a663f83de883740bb6d11669220ccc5d6efde89f7e18f5 WHIRLPOOL 2bf5868080e4dcdca1da37254904a2d41205d481da4c0cc0a2cecdb7ef232ae4762eaa3919e87a60e5b0461d31b7a900f511f5ba35d55f24353236be0ee0e3a9
+MISC ChangeLog 1144 SHA256 984e8d54ea9dc78229b316e14cd6fe3b2f0fdc4276d3df4e18df8558c1e901e7 SHA512 a5bfdbf24870ba8748cca53ba592bda802d250be28805a1bbaa68b6f832660203dc607d9e25d8a6c786a566aa93123882d8522c99c12df46368f8dea645d6957 WHIRLPOOL e50a77f1e6d96ba24ffeb9e99926552a7cb9f1daaae62bb38a8aa7019eca3c7b85b22e157d80b8a07f6c47a169d363d058a3f3d0eb7d052b8390df62481158ff
 MISC metadata.xml 236 SHA256 5285fd5ca6bc85e0392ff64ec8e54d0018ebd761d3977869c00c93dee45ea09d SHA512 a1abf9a60fb1a2078d0475df655f8abd4b2f877f8d232028232fafca2eb7e7ae6ec2c835c4fe0ef27b3b5655d746d1fe53bbcb353703819448ddec84acdd4215 WHIRLPOOL fdbf5fcd34aa17330575f013aef4c87a8b039b62b6de3337a4004a6a0217238ceca43fa15425c30ddb7a5a632de7eb138ed541dfb161614cba817527297781e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTqP8EAAoJEEqz6FtPBkyj/SoIAI1pTxJyE/1rdBytzK/9r1Wt
-HMqp7jMp94rHtU3sv/bYVRbfg7Q1Z1d1HPua4pNrjYwEmQ5PYC6AII2gZxgl/6au
-P2yRSkX6hKqHt5suCWr0aMvvVK984luTtgUrsQOsnXRRpSZ9TUnylPXRd3yuKn+O
-awvJ7h8+Sb2IP3Y706UUVLr/Gt8Wmlq0fSY4bD18DFcoPWkq7TmQ40S4B12HC759
-JF+49iiU4Ij12D5S6whB2pjFKDQkkh7SnO1RVcGPobYDnHammWaI4u7rBvEAvUn6
-yNhi8y6C09yFVd2HrOOBc60sdXN0zo6HFg7krhegSFLIHRLr6o2QSghuclfDX/k=
-=kzyp
+iQEcBAEBCAAGBQJTqP8sAAoJEEqz6FtPBkyjyXIIAIcv5ygEEtG5osC4Hf2F+kHE
+YIWK5ILI2ZNgH8hRkc9a7tXCjYCrNkGy/SbkUJF6P7QK1Te2xRUxttoBLg8NVRUD
+uuTpukVYNaCgX3EUBWZQLGcxsuSt5hpcMtE/uJlS7ohKersJjnNQcC7p88qjeEUo
+RtlFmFY8RYgeuEEGP6bEnnriroBuNkysoiwawXR8xT1oGVcTQhBq3oOg1xQs2/d3
+u9d8wPrw2xYrxOMjljXUZVnbfkZspI1Wkr/09UHs37bbKaa2NwT1KGlLP6/2lAlE
+0heGslFS5CGa4S6r8u25eRMiBS2x26C7h9ZaUYesAT/9ijijDoWHj0KYlvzrXvo=
+=e7kc
 -----END PGP SIGNATURE-----
