@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/evemu
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/evemu/ChangeLog,v 1.6 2014/06/24 04:30:55 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/evemu/ChangeLog,v 1.7 2014/06/24 04:31:39 radhermit Exp $
+
+  24 Jun 2014; Tim Harder <radhermit@gentoo.org> -evemu-1.1.0.ebuild,
+  -evemu-1.2.0.ebuild, -evemu-1.99.1.ebuild:
+  Remove old.
 
 *evemu-2.0.0 (24 Jun 2014)
 
